--- a/news-ios/news-ios/Base.lproj/Main.storyboard
+++ b/news-ios/news-ios/Base.lproj/Main.storyboard
@@ -154,7 +154,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fID-wo-MuL"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Odk-Lg-69D"/>
+                    <navigationItem key="navigationItem" id="Odk-Lg-69D">
+                        <barButtonItem key="leftBarButtonItem" id="pJs-0A-oSK"/>
+                        <rightBarButtonItems>
+                            <barButtonItem title="            " id="0EX-Ki-sbI"/>
+                            <barButtonItem title="Item" image="logo" id="JDE-XQ-uhh"/>
+                        </rightBarButtonItems>
+                    </navigationItem>
                     <connections>
                         <outlet property="pieChartView" destination="jcX-W2-INi" id="Vig-FU-RWk"/>
                         <outlet property="streakNumber" destination="S2a-AX-RMw" id="2uG-Ph-7by"/>
@@ -164,7 +170,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HU2-jC-Pwg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3168.115942028986" y="483.48214285714283"/>
+            <point key="canvasLocation" x="3168" y="478"/>
         </scene>
         <!--Feed Table View Controller-->
         <scene sceneID="XwN-CY-mXo">
@@ -247,18 +253,20 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="w3L-wv-D3a">
-                        <rightBarButtonItems>
-                            <barButtonItem title="Login" id="4vx-VG-AVO">
-                                <connections>
-                                    <action selector="loginOnClick:" destination="RZY-G2-1su" id="W6x-4v-El5"/>
-                                </connections>
-                            </barButtonItem>
+                        <leftBarButtonItems>
                             <barButtonItem title="Add" id="cTA-JQ-hB1">
                                 <connections>
                                     <action selector="addOnClick:" destination="RZY-G2-1su" id="3Gh-eY-gP0"/>
                                 </connections>
                             </barButtonItem>
-                        </rightBarButtonItems>
+                            <barButtonItem id="wXL-fn-xqm"/>
+                            <barButtonItem title="Item" image="logo" id="FeG-98-PNE"/>
+                        </leftBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" title="Login" id="4vx-VG-AVO">
+                            <connections>
+                                <action selector="loginOnClick:" destination="RZY-G2-1su" id="W6x-4v-El5"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -292,7 +300,7 @@
         <scene sceneID="9eJ-ps-eXr">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DgM-x7-m2N" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Feed" id="KOD-Ws-KaF"/>
+                    <tabBarItem key="tabBarItem" title="Feed" image="book" catalog="system" id="KOD-Ws-KaF"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GNg-MX-DKv">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -311,7 +319,7 @@
         <scene sceneID="2Vj-m5-4vf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NO6-Lx-62Q" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="OrI-D9-IUL"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.circle" catalog="system" id="OrI-D9-IUL"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Tlf-wl-yJq">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -327,4 +335,9 @@
             <point key="canvasLocation" x="2257.971014492754" y="483.48214285714283"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="book" catalog="system" width="128" height="101"/>
+        <image name="logo" width="240.5" height="71.5"/>
+        <image name="person.circle" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
